--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -77,6 +77,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+          architecture: 'arm64'
 
       - name: Install build dependencies
         working-directory: python
