test4. Previous succeeded, now to test if rolling will work with updated actions.

--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -119,7 +119,7 @@ jobs:
           target_commitish: ${{ github.sha }}
           files: dist/windows-x64/*
           generate_release_notes: false
-          allow_updates: true
+          overwrite_files: true
           make_latest: true
           fail_on_unmatched_files: true
         env:
